# latent-semantic-analysis

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  codecov.yml  config.yaml  requirements.txt  setup.cfg
data/: load_20newsgroups.py
latent-semantic-analysis/: config.py  utils.py
latent_semantic_analysis/: __main__.py  config.py  data.py  save.py  train.py  utils.py
tests/: test_pipeline.py
