[metadata]
name = latent-semantic-analysis
version = 0.1.0
author = Dani El-Ayyass
author_email = dayyass@yandex.ru
description = Pipeline for training LSA models using Scikit-Learn.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dayyass/latent-semantic-analysis
project_urls =
    Bug Tracker = https://github.com/dayyass/latent-semantic-analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.19.5
    pandas >= 1.1.5
    PyYAML >= 5.4.1
    scikit-learn >= 0.24.2
    scipy >= 1.5.4

[options.entry_points]
console_scripts =
    lsa-train = latent_semantic_analysis.__main__:main
